written the future work section

--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -1841,9 +1841,17 @@ The last column of this table shows the average of the mean absolute errors on a
 The plot obtained from this table can be seen in figure \ref{doverallcomparisonplot}. On average the ARIMA model performs better than the neural networks model, but far worse than the Markov model. Apparently the magnitude of the errors for both the NN method and the ARIMA method is similar, while the Markov method provides exceptionally good results, almost too good, since they are one order of magnitude lower than the other two methods.
 
 \section{Future work}
-%TODO -Which are the main steps to develop your research in the future ?
-%TODO: avergage, naive, snaive on embedded
-%TODO: errors cause
+
+While I consider this research successful, there are still things to do in order to fully polish it and apply it practically on other data sets than the one studied here, hence this section deals with the improvements that can be applied to my work to make it more usable and useful.
+
+First of all, the algorithm should be able to automatically analyze the data in order to decide the parameters to be used on the ARIMA model. Basically one can use the algorithm already described and implemented by Rob J. Hyndman in \cite{fpp2arimainr}, by just calling \texttt{auto.arima}.
+But as any automatic algorithm it has the down fall that the programmer will not completely understand what goes on behind the scenes. As such, I have not taken this path in my dissertation work. If this path were to be followed it would be best suited for an industrial use-case, where only the results (i.e. the forecasts) from the algorithm are needed. As such an improvement to the current work would be making it completely automatic, the user could only feed the raw data into the algorithm and then the algorithm will provide forecasts. Still, such a complete black box would work only on a given set of use-cases, since the "black box" would have to be tuned differently for different use cases, for example economical data tends to behave differently from engineering data.
+
+In order to accomplish the this automatic process, one would have to make use of more statistical tests and rely less on the graphical method of interpreting the plots. I have chosen this way of working in order to develop an understanding of how ARIMA works and what are the principles behind it. So maybe relying more on objective statistical tests (for example the Augmented Dickey–Fuller test for series stationarity) than on interpreting the plots would have led to better models to be fit on the data and then better forecasts to be produced by those models.
+
+One other step for improving the research would be to lower the errors produced by the algorithm. As could be seen in the previous section, there is an order of magnitude difference between ARIMA models and Markov models. I would say that I have reached the limit of the model, but maybe on different data sets this method of forecasting could provide better results. So in order to be sure, both my research and that of my colleagues would have to be repeated on other data sets. In short, I would say that more use cases are needed in order to properly draw conclusions about the algorithm's performance, what suits one data set might not suit the other and vice-versa.
+
+One last thing to note here is the fact that, from a practical standpoint, ARIMA is not feasible on this kind of data. First of all due to the presence of a better model and, if ARIMA is indeed needed, one should also take into account using the benchmark models such as the \texttt{mean} method or the \texttt{naive} and \texttt{snaive} methods. These methods, on certain data sets, provide similar results in the same amount of time with considerably lower overhead for implementation and maintenance. These methods could easily be implemented in embedded devices, such as smart meters, which could provide insight into the electrical energy consumption and production of a household or in the next generation of smart fridges and kitchen appliances, all of these "smart devices" could lead the "smart home" concept to develop an understanding of the household's electrical energy usage and as such, optimize it. The end result could be a reduction of the carbon footprint and an increase in green energy usage, all leading to a better environment for future generations.
 
 \section{Conclusions}
 %TODO: abstract, introduction, R, data, methodology, ARIMA, results, future work
