--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -68,6 +68,14 @@
     note = {\url{https://otexts.org/fpp2/seasonal-arima.html}, Accessed December 2018},
 }
 
+
+@Misc{fpp2arimainr,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {ARIMA in R},
+    date = {December 2018},
+    note = {\url{https://otexts.com/fpp2/arima-r.html}, Accessed February 2019},
+}
+
 @Misc{hyndmanseasonalperiods,
     author = {Rob J Hyndman},
     title = {Seasonal periods},
