added note about hardware in the results section and written part of the conclusion

--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -1732,6 +1732,8 @@ This section of the paper presents the main results of the research and tries to
 
 What follows are descriptions of the tables shown in appendix \ref{resultsappendix} that provide the main results for each of the time series, together with their down-sampled versions.
 
+I have to note that all of these results and their running times have been produced on a quad-core Intel Core i5 processor with 8GB of RAM.
+
 Table \ref{ph1results} shows the chosen models for the \texttt{Ph1} data series, first the series sampled every two hours is shown, then the series sampled every one hour, and finally the original series. For each series several models have been fit and used to predict the time series.
 
 All the results tables from appendix \ref{resultsappendix} will have the same format and meanings for the columns, namely:
@@ -1854,13 +1856,27 @@ One other step for improving the research would be to lower the errors produced 
 One last thing to note here is the fact that, from a practical standpoint, ARIMA is not feasible on this kind of data. First of all due to the presence of a better model and, if ARIMA is indeed needed, one should also take into account using the benchmark models such as the \texttt{mean} method or the \texttt{naive} and \texttt{snaive} methods. These methods, on certain data sets, provide similar results in the same amount of time with considerably lower overhead for implementation and maintenance. These methods could easily be implemented in embedded devices, such as smart meters, which could provide insight into the electrical energy consumption and production of a household or in the next generation of smart fridges and kitchen appliances, all of these "smart devices" could lead the "smart home" concept to develop an understanding of the household's electrical energy usage and as such, optimize it. The end result could be a reduction of the carbon footprint and an increase in green energy usage, all leading to a better environment for future generations.
 
 \section{Conclusions}
-%TODO: abstract, introduction, R, data, methodology, ARIMA, results, future work
+First of all I shall remind the reader that the goal of the paper was forecasting the electricity consumption of a house over a set period of time. As shown by the results I have presented earlier the goal has been successfully achieved and a variation of the ARIMA algorithm is used for predicting electrical energy demand. The results are favorable compared to those produced by the ANN method, but not by much compared to some benchmark algorithms which are much simpler in terms of mathematical complexity and shorter in term of both implementation and running time.
 
-First of all I shall remind the reader that the goal of the paper was forecasting the electricity consumption of a house over a set period of time. As shown by these results the goal has been successfully achieved and a variation of the ARIMA algorithm is used for predicting electrical energy demand. The results are favorable compared to those produced by the ANN method, but not by much compared to some benchmark algorithms which are much simpler in terms of mathematical complexity and shorter in term of both implementation and running time.
+The goal of analyzing and forecasting has been achieved with the help of specific tools, such as those provided by the R programming language and its ecosystem. Namely the \texttt{forecast} package and the \texttt{ggplot2} package, the former package I have used for its ARIMA model implementation and the latter I have used for the plotting functionalities it provides. The route to understand forecasting methods that I have chosen is a visual one, based on plots, so creating them quickly and accurately was of utmost importance.
 
-arima is not really suited for high frequency data
-consumption vs production of electrical energy
+Though not mathematically exact, and not always based on statistical tests (as noted in the previous section) the results of the work do seem to be reasonable and further usable to predict electrical energy consumption and production. The results are comparable with other methods applied on the same data set and even better then the artificial neural networks approach.
+
+My aim was not to produce exact forecasts, but to understand the principles behind time series forecasting, which I explained in this work, and to show that producing usable forecasts from electrical consumption and production data is possible, with the hope that these forecasting principles could be used in the future for smart devices and smart homes to optimize the consumption of electricity, or any other resource for that matter,  in order to ensure a better, greener, healthier environment. 
+
+Unfortunately, due to the high resource consumption, at present, ARIMA is not feasible to be implemented in micro controllers for real time data forecasting. As I showed earlier, only due to the high degree of parallelization were the several-seconds running times possible, otherwise the modeling and fitting phases would have taken several tens of minutes. This makes micro controllers a hard to reach target for ARIMA models because of the minimal resources they provide in order to keep costs of mass production of devices down.
+
+The data that I have analyzed had a sampling rate of five minutes, which is very high with regards to the period during which it was captured: five months. The high amount of data required some innovative solutions in order to be able to use ARIMA on it, these solutions included: using a lower sampling rate (I have chosen one and two hours) and analyzing chunks of data at a time until all the data is modeled. The combination of these two approaches seemed to work best, producing the results I have shown earlier, the errors were relatively low and the running times on the order of several seconds for the more complex models used. As such, one might conclude that ARIMA models are not really suited for use on high frequency data. If one needs to analyze such data sets, one might use the two innovative solutions, down-sampling and chunk-by-chunk analysis or one may choose to use other models, better suited to such data.
+
+The analyzed data set was composed of five time series, three representing the electrical energy consumption by a household and two of them representing the electrical energy production by the same household. Each time series had to be modeled and forecast individually. The three consumption time series ended up being modeled by similar models, showing no big difference in the consumption behavior for different phases of current. The same is true for the electrical energy production data series, the two of them have similar models. This is easily explainable since the photo voltaic panels are installed at the same location, hence the production of electrical energy cannot be that different for one or the other. Regarding the consumption data series, I think that the five month period is not long enough to show any human behavior changing, which in my opinion is the most influential factor in how much and when the consumption of electricity happens.
+
+Both groups of time series have similarities and differences. They are similar in the fact that both are influenced by the time of day, but the difference between them comes from the way that time influences in different ways the consumption and production as shown by the seasonal and seasonal sub-series plots. The consumption of energy peaks in the late morning and is independent of the time of year while the production of electrical energy peaks during the afternoon and is heavily influenced by the time of year since during the summer months the sun shines both brighter and the angle of incidence of the light is the widest, positively influencing the photo voltaic panels and implicitly the production of electrical energy.
+
+Regarding the errors of the algorithm...
+
 since the mean and naive models perform almost as good without the price of complexity.
+
+In conclusion, we can use ARIMA, but there are better alternatives and maybe it is better suited for not-so high frequency data.
 
 \newpage
 \bibliographystyle{plain}
